fix images not showing

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body{
 
-    background-image: url(/images/background1.jpg);
+    background-image: url(images/background1.jpg);
     font-family: amsterdam;
      display: flex;
      justify-content: center;
@@ -16,7 +16,7 @@ body{
 
 @font-face {
     font-family: 'amsterdam';
-    src: url(/fonts/amsterdam-font/Amsterdam-ZVGqm.ttf);
+    src: url(fonts/amsterdam-font/Amsterdam-ZVGqm.ttf);
 }
 
 .title{
